# EMeowlator

./: .gitignore  CMakeLists.txt  Makefile  README.md  resource.res
.github/workflows/: build-meownes.yaml  build.yaml
include/: debug.hpp  nes.hpp
src/: audio.cpp  audio.hpp  cnrom.cpp  cnrom.hpp  config.cpp  config.hpp  console.cpp  console.hpp  emulator.cpp  emulator.hpp  gui.cpp  gui.hpp  main.cpp  main.hpp  mapper.hpp  mmc1.cpp  mmc1.hpp  nes_controller.cpp  nes_cpu.cpp  nes_cpu.hpp  nes_ppu.cpp  nes_ppu.hpp  nes_rom.cpp  nes_rom.hpp  nrom.cpp  nrom.hpp  rom.hpp  savestate.cpp  savestate.hpp
src/filters/: chroma.cpp  chroma.hpp  default.hpp  filter_base.cpp  filter_base.hpp  filters.hpp  grayscale.cpp  nes_ntsc.cpp  ntsc.cpp  ntsc.hpp
src/gb/: gb_bus.hpp  gb_console.cpp  gb_console.hpp  gb_cpu.cpp  gb_cpu.hpp  gb_ppu.cpp  gb_ppu.hpp  gb_rom.cpp  gb_rom.hpp
src/gb/mbcs/: mbc0.cpp  mbc0.hpp  mbc1.cpp  mbc1.hpp  mbc3.cpp  (+4 more)
src/mappers/: bnrom.cpp  bnrom.hpp  cnrom.cpp  cnrom.hpp  jycompany.cpp  jycompany.hpp  mapper_base.cpp  mapper_base.hpp  mappers.hpp  mmc1.cpp  mmc1.hpp  mmc2.cpp  mmc2.hpp  mmc3.cpp  mmc3.hpp  namco_163.cpp  nina01.cpp  nina01.hpp  nrom.cpp  nrom.hpp  sunsoft_fme7.cpp  sunsoft_fme7.hpp  uxrom.cpp  uxrom.hpp
src/nes/: audio.cpp  audio.hpp  nes_apu.cpp  nes_apu.hpp  nes_bus.hpp  nes_console.cpp  nes_console.hpp  nes_controller.cpp  nes_controller.hpp  nes_cpu.cpp  nes_cpu.hpp  nes_ntsc.cpp  nes_ntsc.h  nes_ntsc_config.h  nes_ppu.cpp  nes_ppu.hpp  nes_rom.cpp  nes_rom.hpp
src/qt/: input_manager.hpp  key_capture.hpp  palette_editor.hpp  screen_widget.hpp
(+45 files in other folders)
